@@ -1,0 +1,2 @@
+GFXINC += $(GFXLIB)/drivers/gdisp/UC1610
+GFXSRC += $(GFXLIB)/drivers/gdisp/UC1610/gdisp_lld_UC1610.c
